--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.11</version>
+      </plugin>
     </plugins>
   </build>
 
